--- a/day3 Bootstrap/css/styles.css
+++ b/day3 Bootstrap/css/styles.css
@@ -24,6 +24,10 @@ img {
   width: 100%;
 }
 
+.row {
+  margin-bottom: 20px;
+}
+
 .medLeft {
   text-align: center;
 }
@@ -35,11 +39,6 @@ img {
 
 .section1 {
   margin: 10px 10px 30px 10px;
-  height: 450px;
-}
-
-.section11 {
-  margin: 10px 10px 30px 10px;
   height: 500px;
 }
 
@@ -49,17 +48,10 @@ img {
 }
 
 .inside1 {
-  height: 100%;
+  height: 200px;
   border: 1px solid grey;
 }
-
-.inside2, .inside3 {
-  height: 50%;
+.inside2 {
+  height: 400px;
   border: 1px solid grey;
-}
-
-@media (max-width: @screen-sm-max) {
-  .inside2, .inside3, .inside11 {
-    height: 33%;
-  }
 }
