--- a/day3 Bootstrap/css/styles.css
+++ b/day3 Bootstrap/css/styles.css
@@ -11,47 +11,58 @@ html, body {
   padding: 0px;
 }
 
-.second {
-  width: 1200px;
-}
-
-.thumbnail {
-  border: 0px;
-  padding-top: 50px;
-}
-
-img {
-  width: 100%;
-}
-
-.row {
-  margin-bottom: 20px;
-}
-
-.medLeft {
-  text-align: center;
-}
-
-.medias {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
 .section1 {
-  margin: 10px 10px 30px 10px;
-  height: 500px;
+  height: 600px;
+}
+.section2 {
+  height: 600px;
 }
 
-.mainRight, .mainLeft {
-  padding: 0px 5px;
-  height: 100%;
+
+/* section1 */
+.mainImg1 {
+  height: 520px;
+  background-image: url('../images/main1.png');
+  background-size: cover;
+  background-position: center center;
+  margin: 10px;
 }
 
-.inside1 {
-  height: 200px;
-  border: 1px solid grey;
+.mainImg2 {
+  height: 250px;
+  background-image: url('../images/main2.jpg');
+  background-size: cover;
+  background-position: center center;
+  margin: 10px;
 }
-.inside2 {
-  height: 400px;
-  border: 1px solid grey;
+
+.mainImg3 {
+  height: 250px;
+  background-image: url('../images/main5.jpg');
+  background-size: cover;
+  background-position: center center;
+  margin: 10px;
+}
+
+
+/* section2 */
+.thumb {
+  height: 250px;
+}
+
+.thumb .cover {
+  height: 150px;
+  background-image: url('../images/main3.png');
+  background-size: cover;
+  background-position: center center;
+}
+
+
+@media (max-width: 767px) {
+  .mainImg1, .mainImg2, .mainImg3 {
+    height: 200px;
+  }
+  .section1 {
+    height: 700px;
+  }
 }
