--- a/day8 jQuery practice/css/custom.css
+++ b/day8 jQuery practice/css/custom.css
@@ -1,26 +1,48 @@
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+
+/* Header */
 .headerTitle {
-  /*border-bottom: 1px solid grey;*/
   margin-bottom: 10px;
 }
 
-.addItem {
+/* item list*/
+#addItem {
   border-top: 1px solid grey;
   border-bottom: 1px solid grey;
   padding: 10px 0px;
   margin-top: 10px;
 }
 
-.blue {
-  background-color: rgba(173, 216, 230, 1);
-  width: 100%;
-  height: 100%;
-  text-align: center;
-}
-
+/* item */
 .listedItem {
-  border-top: 1px solid rgba(200, 200, 200, 0.77);
+  border-top: 1px solid lightgray;
   margin-bottom: 5px;
   padding-top: 5px;
   padding-bottom: 10px;
-  height:auto;
+  height: 40px;
+}
+
+.removeItem {
+  display: none;
+}
+
+.listedItem:hover {
+  background-color: #eee;
+}
+
+.listedItem:hover .removeItem {
+  display: block;
+}
+
+/* icon */
+i {
+  width: 100%;
+  text-align: center;
 }
