--- a/day13 candyStore ajax/views/layout.pug
+++ b/day13 candyStore ajax/views/layout.pug
@@ -22,4 +22,7 @@ html(lang='en')
     script(src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js')
     // Include all compiled plugins (below), or include individual files as needed
     script(src='http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js')
+    
+    script(src='http://wzrd.in/standalone/uuid@latest')
+    
     block scripts
