search performance enhanced

--- a/day33 React Basic/src/components/App/App.css
+++ b/day33 React Basic/src/components/App/App.css
@@ -1,24 +1,28 @@
 .App {
   text-align: center;
+  padding: 10px 15px;
+  height: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding-top: 17px;
+  overflow: auto;
+  overflow-x: hidden;
+  overflow-style: none;
+}
+.App::-webkit-scrollbar {
+  display: none;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+#bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 120px;
+  background-color: rgb(50, 50, 50);
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  box-shadow: 2px 2px 2px 0 gray;
 }
