--- a/day33 React Basic/src/index.css
+++ b/day33 React Basic/src/index.css
@@ -1,5 +1,29 @@
+html {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
   font-family: sans-serif;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: rgb(230, 230, 230);
+}
+
+#root {
+  height:100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
 }
